--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-karma": "~0.4.1"
+    "grunt-karma": "~0.4.1",
+    "grunt-docker": "0.0.4"
   }
 }
